<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:color="@color/colorPrimary"
        android:icon="@drawable/ic_home"
        android:title="@string/home" />
    <item
        android:id="@+id/nav_mdlnews"
        android:color="@color/colorPrimary"
        android:icon="@drawable/ic_slideshow"
        android:title="@string/promo_code2" />
    <item
        android:id="@+id/nav_aliexpress"
        android:color="@color/colorPrimary"
        android:icon="@drawable/ic_gallery"
        android:title="@string/promo_codes1" />
    <item
        android:id="@+id/nav_login"
        android:color="@color/colorPrimary"
        android:icon="@drawable/ic_login"
        android:title="@string/login" />
    <item
        android:id="@+id/nav_logout"
        android:color="@color/purple_200"
        android:icon="@drawable/ic_logout"
        android:title="@string/logout" />

</menu>