<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/navSidePannel"
    android:layout_width="match_parent"
    android:layout_height="350dp"
    android:gravity="bottom"
    android:color="@color/transparent_black_menu"
    android:orientation="vertical"
    android:theme="@style/Base.ThemeOverlay.AppCompat.Dark">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="275dp"
        android:layout_height="143dp"
        android:contentDescription="@string/todo"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:src="@drawable/fluent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.31" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginTop="4dp"
        android:text="@string/fox_socialmdl"
        android:textAlignment="center"
        android:textStyle="normal|bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sgi_textView"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/sgi_textView"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:text="@string/made_with_by_edgar_cuppari"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

</androidx.constraintlayout.widget.ConstraintLayout>