<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D75B1236"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:orientation="horizontal"
        android:paddingStart="45dp"
        android:paddingEnd="45dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            android:text="@string/social_mdl"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="end"
            android:letterSpacing="0.13"
            android:text=""
            android:textColor="#ff5a85"
            android:textSize="12sp"
            android:textStyle="bold" />
    </LinearLayout>


    <ImageView
        android:id="@+id/imageViewGif"
        android:layout_width="397dp"
        android:layout_height="278dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="64dp"
        android:paddingStart="75dp"
        android:paddingEnd="75dp"
        android:src="@drawable/worldnews" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="80dp"
        android:fontFamily="mo"
        android:includeFontPadding="false"
        android:letterSpacing="-0.01"
        android:text="@string/für"
        android:textColor="#99ff5a85"
        android:textSize="41sp" />

    <TextView
        android:layout_width="321dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:fontFamily="sans-serif-condensed"
        android:includeFontPadding="false"
        android:letterSpacing="-0.01"
        android:text="@string/gamers"
        android:textAllCaps="true"
        android:textColor="#ff5a85"
        android:textSize="48sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-light"
        android:letterSpacing="-0.01"
        android:lineSpacingExtra="4sp"
        android:text="@string/excepteur_sint_occaecat_cupidatat_non_proident_sunt_in_culpa_qui_officia"
        android:textColor="#66ffffff"
        android:textSize="14sp" />


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/circles_2" />

</LinearLayout>