<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:id="@+id/redirectPage"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fadeScrollbars="true"
    android:background="@color/transparent_black_menu"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="270dp"
        android:layout_height="194dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/todo"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:src="@drawable/fluent_pro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/sgi_textView"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginTop="4dp"
        android:allowUndo="true"
        android:text="@string/some_issus_are"
        android:textAlignment="center"
        android:textColor="@color/cardview_light_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="21dp"
        android:text="@string/logged_in_successfully"
        android:textAlignment="center"
        android:textColor="@color/cardview_light_background"
        android:textStyle="normal|bold"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sgi_textView"
        tools:visibility="visible" />

    <Button
        android:id="@+id/logoutButton"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:text="@string/checkout"
        android:textAlignment="viewStart"
        android:textAllCaps="true"
        android:textColor="#E91E1E"
        android:textSize="16sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:icon="?android:attr/textSelectHandleRight"
        app:iconPadding="9sp"
        app:iconTint="#5D1010"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTime"
        app:layout_constraintVertical_bias="0.927"
        tools:ignore="Deprecated,MissingConstraints">

    </Button>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewTime"
        android:layout_width="110dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="80dp"
        android:gravity="center"
        android:text=""
        android:textAlignment="center"
        android:textColor="@color/teal_700"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="182dp" />

</androidx.constraintlayout.widget.ConstraintLayout>